Resolve sonar issues.